force-app/main/default/objects/Process_Approval__c/Process_Approval__c.object-meta.xml
<CustomObject>
    <label>Process Approval</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Process Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>