force-app/main/default/objects/Process_Approval__c/fields/Approved_by_PerfectVision__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_PerfectVision__c</fullName>
    <label>Approved by PerfectVision</label>
    <type>Date</type>
</CustomField>