force-app/main/default/objects/Process_Approval__c/fields/DIRECTV_Expiration__c.field-meta.xml
<CustomField>
    <fullName>DIRECTV_Expiration__c</fullName>
    <label>DIRECTV Id Expiration Date</label>
    <type>Date</type>
</CustomField>