force-app/main/default/objects/Process_Approval__c/fields/Drug_Screen_Date__c.field-meta.xml
<CustomField>
    <fullName>Drug_Screen_Date__c</fullName>
    <label>Drug Screen Date</label>
    <type>Date</type>
</CustomField>