force-app/main/default/objects/Process_Approval__c/fields/ID_DirecTV__c.field-meta.xml
<CustomField>
    <fullName>ID_DirecTV__c</fullName>
    <label>ID-DirecTV</label>
    <length>80</length>
    <type>Text</type>
</CustomField>