force-app/main/default/objects/Process_Approval__c/fields/ID_Servicebench__c.field-meta.xml
<CustomField>
    <fullName>ID_Servicebench__c</fullName>
    <label>ID Servicebench</label>
    <length>80</length>
    <type>Text</type>
</CustomField>