force-app/main/default/objects/Process_Approval__c/fields/Include_in_Scheduling_Optimization__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Scheduling_Optimization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Scheduling Optimization</label>
    <type>Checkbox</type>
</CustomField>