force-app/main/default/objects/Process_Approval__c/fields/Inventory_Location__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inventory Location</label>
    <type>Checkbox</type>
</CustomField>