force-app/main/default/objects/Process_Approval__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Van</fullName>
            </value>
            <value>
                <fullName>Plant</fullName>
                <isActive>false</isActive>
                <label>Plant</label>
            </value>
            <value>
                <fullName>Site</fullName>
                <isActive>false</isActive>
                <label>Site</label>
            </value>
            <value>
                <fullName>Virtual</fullName>
                <isActive>false</isActive>
                <label>Virtual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>