force-app/main/default/objects/Process_Approval__c/fields/MailingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>MailingPostalCode__c</fullName>
    <label>MailingPostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>