force-app/main/default/objects/Process_Approval__c/fields/MailingStreet__c.field-meta.xml
<CustomField>
    <fullName>MailingStreet__c</fullName>
    <label>MailingStreet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>