force-app/main/default/objects/Process_Approval__c/fields/Mobile_Location__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Location</label>
    <type>Checkbox</type>
</CustomField>