force-app/main/default/objects/Process_Approval__c/fields/Resource_Image__c.field-meta.xml
<CustomField>
    <fullName>Resource_Image__c</fullName>
    <label>Resource Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>