force-app/main/default/objects/Process_Approval__c/fields/Service_memberships__c.field-meta.xml
<CustomField>
    <fullName>Service_memberships__c</fullName>
    <label>Service memberships</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>