force-app/main/default/objects/Process_Approval__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Process Approvals (Service Resource)</relationshipLabel>
    <relationshipName>Process_Approvals1</relationshipName>
    <type>Lookup</type>
</CustomField>