force-app/main/default/objects/Process_Approval__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <label>Skill</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>