force-app/main/default/objects/Process_Approval__c/fields/Skill_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Skill_Start_Date__c</fullName>
    <label>Skill Start Date</label>
    <type>Date</type>
</CustomField>