force-app/main/default/objects/Process_Approval__c/fields/Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Type__c</fullName>
    <label>Vendor Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>COSTCO</fullName>
            </value>
            <value>
                <fullName>DIRECTV</fullName>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
            <value>
                <fullName>Viasat</fullName>
            </value>
            <value>
                <fullName>WOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>