force-app/main/default/objects/Process_Approval__c/fields/Viasat_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Viasat_Expiration__c</fullName>
    <label>Viasat Id Expiration Date</label>
    <type>Date</type>
</CustomField>