force-app/main/default/objects/Process_Approval__c/recordTypes/Location_Approval.recordType-meta.xml
<RecordType>
    <fullName>Location_Approval</fullName>
    <active>true</active>
    <description>To approve the location records created by Dispatcher</description>
    <label>Location Approval</label>
</RecordType>