force-app/main/default/objects/Process_Approval__c/recordTypes/Service_Resource_Approval.recordType-meta.xml
<RecordType>
    <fullName>Service_Resource_Approval</fullName>
    <active>true</active>
    <label>Service Resource Approval</label>
</RecordType>