force-app/main/default/objects/Process_Approval__c/listViews/ISG_Admin_Process_Approval.listView-meta.xml
<ListView>
    <fullName>ISG_Admin_Process_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>ISG Admin</label>
    <queue>ISG_Admin</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>