force-app/main/default/objects/Process_Approval__c/listViews/My_requests.listView-meta.xml
<ListView>
    <fullName>My_requests</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Resource_Type__c</columns>
    <columns>Email__c</columns>
    <filterScope>Mine</filterScope>
    <label>My requests</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>