force-app/main/default/objects/Process_Approval__c/listViews/Pending_Approvals.listView-meta.xml
<ListView>
    <fullName>Pending_Approvals</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Location_Name__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Approvals</label>
</ListView>