force-app/main/default/objects/Process_Approval__c/listViews/PV_Admin_Process_Approval.listView-meta.xml
<ListView>
    <fullName>PV_Admin_Process_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>PV Admin</label>
    <queue>PV_Admin</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>